--- a/buildspecs/apps/amrex/amrex_single_vortex_perlmutter.yml
+++ b/buildspecs/apps/amrex/amrex_single_vortex_perlmutter.yml
@@ -11,7 +11,7 @@ buildspecs:
       - "-C gpu"
       # Note: This test doesn't use GPUs.
     run: |
-      module load e4s/22.11
+      module load e4s
       spack env activate gcc
       # Use the PrgEnv-gnu to avoid issues with NVHPC and Fortran
       module load PrgEnv-gnu
